@@ -1,5 +1,6 @@
 v0.6 - Pending
 	+ Add support for playlists (save, load, queue, delete)
+	+ Ability to use local image for album cover
 	+ Add Ctrl-U and Ctrl-Shift-U for updating library (see docs)
 	+ (Re-)display systray icon if tray is (re-)opened
 	+ Fix mpdclient3.py to return all playlist objects
